--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.6
+  get_it: ^7.6.7
+  fluttertoast: ^8.2.0
+  flutter_spinkit: ^5.2.1
 
 dev_dependencies:
   flutter_test:
