--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.6
-  get_it: ^7.6.7
+  go_router: ^13.2.0
   fluttertoast: ^8.2.0
   flutter_spinkit: ^5.2.1
   universal_html: ^2.2.4
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
